--- a/Pymaceuticals/Pymaceuticals.ipynb
+++ b/Pymaceuticals/Pymaceuticals.ipynb
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1588,9 +1588,29 @@
      "output_type": "stream",
      "text": [
       "The IQR for Capomulin is: 7.781863460000004\n",
+      "     It's Upper Quartile is: 40.1592203\n",
+      "     It's Lower Quartile is: 32.37735684\n",
+      "     It's Upper Bound is: 51.83201549\n",
+      "     It's Lower Bound is: 20.70456164999999\n",
+      "     Potential Outliers: 0\n",
       "The IQR for Ramicane is: 9.098536719999998\n",
+      "     It's Upper Quartile is: 40.65900627\n",
+      "     It's Lower Quartile is: 31.56046955\n",
+      "     It's Upper Bound is: 54.30681135\n",
+      "     It's Lower Bound is: 17.912664470000003\n",
+      "     Potential Outliers: 0\n",
       "The IQR for Infubinol is: 11.477135160000003\n",
-      "The IQR for Ceftamin is: 15.577752179999997\n"
+      "     It's Upper Quartile is: 65.52574285\n",
+      "     It's Lower Quartile is: 54.04860769\n",
+      "     It's Upper Bound is: 82.74144559000001\n",
+      "     It's Lower Bound is: 36.83290494999999\n",
+      "     Potential Outliers: 1\n",
+      "The IQR for Ceftamin is: 15.577752179999997\n",
+      "     It's Upper Quartile is: 64.29983003\n",
+      "     It's Lower Quartile is: 48.72207785\n",
+      "     It's Upper Bound is: 87.66645829999999\n",
+      "     It's Lower Bound is: 25.355449580000002\n",
+      "     Potential Outliers: 0\n"
      ]
     }
    ],
@@ -1605,9 +1625,9 @@
     "    # add subset \n",
     "    # Determine outliers using upper and lower bounds\n",
     "\n",
-    "for drug in drugs:   \n",
+    "for regimen in drugs:   \n",
     "    \n",
-    "    sub_df = loc_df.loc[loc_df['Drug Regimen'] == drug]\n",
+    "    sub_df = loc_df.loc[loc_df['Drug Regimen'] == regimen]\n",
     "    finVol = sub_df.loc[sub_df['Timepoint'] == sub_df['MaxTime']]\n",
     "    tumVol = finVol['Tumor Volume (mm3)']\n",
     "    tumorVol_data.append(tumVol)\n",
@@ -1616,8 +1636,18 @@
     "    lowerq = quarts[0.25]\n",
     "    upperq = quarts[0.75]\n",
     "    IQR = upperq-lowerq\n",
-    "    print(f\"The IQR for {drug} is: {IQR}\")\n",
-    "    "
+    "    lowerb = lowerq - (1.5*IQR)\n",
+    "    upperb = upperq + (1.5*IQR)\n",
+    "    print(f\"The IQR for {regimen} is: {IQR}\")\n",
+    "    print(f\"     It's Upper Quartile is: {upperq}\")\n",
+    "    print(f\"     It's Lower Quartile is: {lowerq}\")\n",
+    "    print(f\"     It's Upper Bound is: {upperb}\")\n",
+    "    print(f\"     It's Lower Bound is: {lowerb}\")\n",
+    "    \n",
+    "    upperOutlier = tumVol.loc[(finVol['Tumor Volume (mm3)'] > upperb)].count()\n",
+    "    lowerOutlier = tumVol.loc[(finVol['Tumor Volume (mm3)'] < lowerb)].count()\n",
+    "    Outliers = upperOutlier + lowerOutlier\n",
+    "    print(f\"     Potential Outliers: {Outliers}\")"
    ]
   },
   {
