--- a/Pymaceuticals/Pymaceuticals.ipynb
+++ b/Pymaceuticals/Pymaceuticals.ipynb
@@ -14,7 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Observations & Insights (3)\n",
+    "# 1. Capomulin and Ramicane appear to be the most promising drug regimens as their results have the lowest means and standard deviations. These would be the two drugs to suggest for further research.  \n",
+    "# 2. While Capomulin and Ramicane show the best results, they also have the most measurements. A higher number of measurements could level out/smooth the data and statistics for some of the other drug regimens. To properly evaluate the effectiveness of each drug regimen, I would recommend making the measurements for all the drugs the same. \n",
+    "# 3. There is a strong correlation between mouse weight and tumor volume for Capomulin. This indicates there is a potential relationship between these two factors while on the Capomulin drug regimen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 288,
    "metadata": {
     "scrolled": true
    },
@@ -123,7 +135,7 @@
        "4     g791     Ramicane    Male          11          16"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +225,7 @@
        "4     c819          0                45.0                 0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +346,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +369,7 @@
        "249"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +392,7 @@
        "1893"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 293,
    "metadata": {
     "scrolled": true
    },
@@ -585,7 +597,7 @@
        "[1888 rows x 8 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +620,7 @@
        "1888"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +652,7 @@
        "Name: Mouse ID, Length: 249, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +683,7 @@
        "Name: Mouse ID, Length: 249, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 297,
    "metadata": {
     "scrolled": true
    },
@@ -830,7 +842,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1004,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1034,7 @@
        "<AxesSubplot:title={'center':'Number of Measurements per Drug Regimen'}, xlabel='Drug Regimen', ylabel='Number of Measurements'>"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1052,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1208,7 @@
        "[249 rows x 1 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 302,
    "metadata": {
     "scrolled": true
    },
@@ -1266,7 +1278,7 @@
        "Male      125    0.502008"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1302,7 @@
        "<AxesSubplot:title={'center':'Female vs. Male'}>"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1317,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 305,
    "metadata": {
     "scrolled": false
    },
@@ -1557,7 +1569,7 @@
        "[249 rows x 9 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 308,
    "metadata": {
     "scrolled": true
    },
@@ -1864,7 +1876,7 @@
        "39           28.430964                 1  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
